--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="logo">
 				 <a href="index.html"><h1>Nirbhed <span>Foundation</span></h1></a>
 			 </div>
-			 <div class="hdr-address">
+			<!--  <div class="hdr-address">
 				 <div class="address1">
 					 <h5> Plot no. 333, Shakti Khand III</h5>
 					 <p>Indirapuram, Ghaziabad, 201014</p>
@@ -39,9 +39,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <p>Call Us</p>
 				 </div>
 				 <div class="clearfix"></div>
-			 </div>
+			 </div> -->
 			
-			 <div class="clearfix"> </div>
+			 <!-- <div class="clearfix"> </div> -->
 			 <!-- search-scripts -->
 			
 			<!-- //search-scripts -->
