--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="logo">
 			 	<a href="index.html"><h1>Nirbhed <span>Foundation</span></h1></a>
 			 </div>
-			 <div class="hdr-address">
+			<!--  <div class="hdr-address">
 				 <div class="address1">
 					 <h5> Plot no. 333, Shakti Khand III</h5>
 					 <p>Indirapuram, Ghaziabad, 201014</p>
@@ -49,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="clearfix"></div>
 			 </div>
 			 
-			 <div class="clearfix"> </div>
+			 <div class="clearfix"> </div> -->
 			 <!-- search-scripts -->
 			
 			<!-- //search-scripts -->
@@ -57,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="top-menu">
 			 <span class="menu">MENU</span>
 			 <ul>
-			 <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</a></li>
+			 <li class="active"><a href="index.html" ><span class="glyphicon glyphicon-home" aria-hidden="true" ></span>Home</a></li>
 			 <li><a href="about.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>About</a></li>
 			 <li><a href="shortcodes.html"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>Shortcodes</a></li>
 			 <li><a href="gallery.html"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Gallery</a></li>
